# spl-compiler

./: CMakeLists.txt  README(C).txt  README.md  abgeben.sh  build.sh  compile_commands.json  test-parser.py  test-semant.py  test-table.py  test.py
docker/: Dockerfile
docker/.submitscript/data/: team.json
eco32tools/: ReadMe.txt  compile-our.sh  compile.sh  run.sh
progs/: 1.spl  2.spl  3.spl  4.spl  5.spl  run_compile.sh
progs/runtime_tests/: doWhile.spl  gol.spl  moreRegisters.spl
progs/semant/: argumentMustBeAVariable.spl  argumentTypeMismatch_1.spl  argumentTypeMismatch_2.spl  arithmeticOperatorNonInteger_alex.spl  arithmeticOperatorNonInteger_paul.spl  assignmentHasDifferentTypes_alex.spl  assignmentHasDiffrentTypes.spl  assignmentRequiredIntegers_alex.spl  assignmentRequiresInteger.spl  callOfNonProcedure_1.spl  callOfNonProcedure_2.spl  comparisonNonInteger_alex.spl  comparisonNonInteger_paul.spl  ifConditionMustBeBoolean_1.spl  ifConditionMustBeBoolean_2.spl  indexingNonArray_alex.spl  indexingNonArray_paul_1.spl  indexingNonArray_paul_2.spl  indexingWithNonInteger_alex.spl  indexingWithNonInteger_paul.spl  mustBeAReferenceParameter.spl  notAVariable_alex_1.spl  notAVariable_alex_2.spl  notAVariable_paul.spl  operatorDifferentTypes_alex_1.spl  operatorDifferentTypes_alex_2.spl  operatorDifferentTypes_paul.spl  tooFewArguments.spl  tooManyArguments.spl  ttb.spl  undefinedProcedure.spl  undefinedVariable_alex.spl  undefinedVariable_paul.spl  whileConditionMustBeBoolean_1.spl  whileConditionMustBeBoolean_2.spl
src/: command_line_options.c  command_line_options.h  main.c
src/absyn/: _declarations.h  absyn.h  expressions.c  expressions.h  global_declarations.c  global_declarations.h  lists.c  lists.h  parameter_declaration.c  parameter_declaration.h  position.c  position.h  program.c  program.h  statements.c  statements.h  type_expressions.c  type_expressions.h  variable_declaration.c  variable_declaration.h  variables.c  variables.h
src/absyn/printing/: printing_helpers.c  printing_helpers.h
src/phases/_01_scanner/: scanner.flex  scanner.h
src/phases/_02_03_parser/: parser.y
src/phases/_04a_tablebuild/: createtype.c  createtype.h  tablebuild.c  tablebuild.h
src/phases/_04b_semant/: procedurebodycheck.c  procedurebodycheck.h
src/phases/_05_varalloc/: stack_layout.c  stack_layout.h  varalloc.c  varalloc.h
src/phases/_06_codegen/: codegen.c  codegen.h  codeprint.c  codeprint.h  (+2 more)
src/table/: entry.c  entry.h  identifier.c  identifier.h  table.c  table.h
src/types/: types.c  types.h
src/util/: ascii_table.c  ascii_table.h  errors.c  errors.h  list.h  memory.c  memory.h  string_ops.c  string_ops.h
